crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__while__class_in_body.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/class_in_body.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
[line 2] Error at 'class': Expect expression.
