crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__while__closure_in_body.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/closure_in_body.lox
---
success: true
exit_code: 0
----- stdout -----
3
3
3

----- stderr -----
