crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__while__return_closure.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/return_closure.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: Undefined variable `i`.
   ╭─[craftinginterpreters/test/while/return_closure.lox:4:21]
   │
 4 │     fun g() { print i; }
   │                     ─  
   │                         
───╯
