crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__while__return_inside.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/return_inside.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
[line 4] Error at 'return': Expect expression.
